--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ a:visited {
 @media print and (orientation: portrait) {
     body {
         font-family: Arial, Helvetica;
+        background-image: none;
         }
 
     .nav_links {
@@ -148,7 +149,8 @@ a:visited {
     display: inline-block;
    }
 
-   .gallery {
+   .gallery, #gallery {
         display: none;
    }
+
 }
