--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
- 
+ /* animating logo */
 #logo {
     animation: logoAnimation 5s ease-out forwards;
     width: 25px;
@@ -16,7 +16,7 @@
     }
 }
 
-
+/* default view specifications */
 body {
     font-family: "Poppins", serif;
     background-image: url("../images/concrete_seamless.png");
@@ -36,6 +36,7 @@ header {
     flex-direction: column;
 }
 
+/* link styling challenge */
 a {
     color: #0000EE;
 }
@@ -43,7 +44,7 @@ a:visited {
     color: #0000EE;
 }
 
-
+/* styling cards/headers */
 .card > header {
     background: #288088;
     border: solid 2px #45adad;
@@ -67,7 +68,7 @@ a:visited {
    justify-content: center;
 }
 
-
+/* styling image gallery */
 .gallery img {
     border: solid 10px #50C7C7;
     margin: 10px;
@@ -82,6 +83,7 @@ a:visited {
     justify-content: center; 
  } 
 
+/* styling for screen greater than 900px */
  @media screen and (min-width: 900px) {
     header{
         display: flex;
@@ -113,7 +115,7 @@ a:visited {
         margin-top: 120px;
     }
 }
-
+/* reduced motion query */
 @media (prefers-reduced-motion: reduce) {
     #logo {
         animation: none;
@@ -123,6 +125,7 @@ a:visited {
 
 } 
 
+/* portrait printed styling */
 @media print and (orientation: portrait) {
     body {
         font-family: Arial, Helvetica;
@@ -144,6 +147,7 @@ a:visited {
         flex-basis: 325px;
    }
 
+   /* adding thumbs up entity */
    .card ul li:nth-child(2)::after {
     content: "👍";
     display: inline-block;
